* fixing alignments

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -152,6 +152,8 @@ h5 {
     flex-wrap: wrap;
     background-color: #f3f3f3;
     padding: 25px 0 10px 0;
+    width: 100vw;
+    margin: 0 auto;
 }
 .app-store{
     text-align: center;
